--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&type=webgl&ak=HTKstY8Lsyf0olnfwONnExBqEw1ljEWZ"></script>
   </body>
 </html>
